--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 <div class="card">
   <div id="game">
     <h2>🎮 Mini Game</h2>
-    <p><strong>Who’s your little yeye?</strong></p>
+    <p><strong>Who’s your lil yeye?</strong></p>
 
     <div class="names">
       <button onclick="wrongPick()">Emily</button>
